test/files/pos/t7011.scala
object bar {
	def foo: Unit = {
    lazy val x = 42

    {()=>x}
  }
}